--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
         <div class="container">
           <button id="sign-up" class="col-12">SIGN UP</button>
           <form action="">
-            <button id="log-in" href="" class="col-12">LOGIN</button>
+            <button id="log-in" class="col-12">LOGIN</button>
           </form>
           <ul class="text-center">
             <li><a href="#">Cookie</a></li>
